--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <h1>Bektaş Talayoğlu</h1>
 <h2> Hakkımda </h2>
 <p> Merhaba, Ben Bektaş Talayoğlu İstanbul'da yaşıyorum. Yazılım ile uğraşmayı seviyorum.</p> <p>Kendimi geliştirmeye devam ediyorum. </p>
-<h2> Sevdiğim Diziler </h2>
-<h3> Dexter </h3>
+
+<h2> İlgi Alanlarım </h2>
+<ol>
+    <li>Film
+        <ul>
+            <li>Recep İvedik</li>
+            <li>Spider Man</li>
+            <li>Dead Pool</li>
+        </ul>
+    </li>
+    <li>Dizi
+        <ul>
+            <li>
+                <a href="https://www.imdb.com/title/tt0773262/" target="_blank" >
+                    Dexter
+                </a>
+            </li>
+            <li>The Office</li>
+            <li>The Big Bang Theory</li>
+        </ul>
+    </li>
+    <li>Kitap
+        <ul>
+            <li>Fareler ve İnsanlar</li>
+            <li>Yaşar Ne Yaşar Ne Yaşamaz</li>
+            <li>Cikolata Fabrikası</li>
+        </ul>
+    </li>
+</ol>
+<h2><strong>Sevdiğim Diziler</strong></h2>
+<h3><strong>Dexter</strong></h3>
 <p>Dizi Konusu : Dexter Morgan (Michael C. Hall), Miami Metro Polis Departmanı'nda kan sıçrama analisti olarak çalışıyor ve aynı zamanda bir seri katil olarak gizli bir hayat sürdürüyor.</p>
 <p>Miami'de geçen hikâye Jeff Lindsay'in Dexter romanlarının ilki olan Darkly Dreaming Dexter romanından uyarlanmıştır.</p>
+
+<img src="images/dexter.jpg" alt="Dexter" _band >
